DOM Parser Implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ CLIENT_ID_CONFIG=ProductStreamProducer
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
-spring.datasource.url=jdbc:h2:file:~/test
+spring.datasource.url=jdbc:h2:file:~/product
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
