Implemented Spring Actuator

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,8 +36,9 @@ spring.batch.job.enabled=false
 
 #Actuator config
 management.endpoint.shutdown.enabled=true
-management.endpoints.enabled-by-default=false
-management.endpoint.info.enabled=true
+management.endpoints.web.exposure.include=health,info,beans,env
+management.security.enabled=false
+
 
 
 
